--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,11 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.appsnipp.news"
-        minSdkVersion 17
+        applicationId "com.sk3a.news"
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -21,8 +22,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:support-v13:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -30,4 +33,31 @@ dependencies {
 
     //for circular image
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+
+    //for firebase testing
+
+    implementation 'com.github.bumptech.glide:glide:4.3.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
+    //implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    //implementation 'com.google.android.material:material:1.0.0'
+    //implementation 'com.google.firebase:firebase-auth:19.2.0'
+    //implementation 'com.google.firebase:firebase-database:19.2.0'
+    //implementation 'com.google.gms:google-services:4.2.0'
+    //implementation 'com.google.android.gms:play-services-ads:18.3.0'
+    //implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.6'
+    implementation 'com.google.firebase:firebase-database:16.0.5'
+    implementation 'com.google.firebase:firebase-auth:16.1.0'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation 'com.google.gms:google-services:4.2.0'
+
+    //save fav
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+
+    //def lottieVersion = "3.4.0"
+    //implementation "com.airbnb.android:lottie:$lottieVersion"
+    //implementation 'com.airbnb.android:lottie:2.8.0'
+    //implementation 'com.google.android.gms:play-services-ads:19.1.0'
 }
+apply plugin: 'com.google.gms.google-services'
