--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "28.0.3"
     defaultConfig {
         applicationId "com.sk3a.news"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -21,6 +21,7 @@ android {
 }
 
 dependencies {
+    //adding part from Luong
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:support-v13:28.0.0'
@@ -36,29 +37,26 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.0'
 
     //for firebase testing
-
     implementation 'com.github.bumptech.glide:glide:4.3.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
-    //implementation 'com.google.android.gms:play-services-auth:16.0.1'
-    //implementation 'com.google.android.material:material:1.0.0'
-    //implementation 'com.google.firebase:firebase-auth:19.2.0'
-    //implementation 'com.google.firebase:firebase-database:19.2.0'
-    //implementation 'com.google.gms:google-services:4.2.0'
-    //implementation 'com.google.android.gms:play-services-ads:18.3.0'
-    //implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.google.firebase:firebase-core:16.0.6'
     implementation 'com.google.firebase:firebase-database:16.0.5'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
+    implementation 'com.google.firebase:firebase-storage:16.0.1'
+    implementation 'com.google.firebase:firebase-firestore:18.0.0'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.google.gms:google-services:4.2.0'
 
-    //save fav
-    implementation "android.arch.persistence.room:runtime:1.0.0"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
-
-    //def lottieVersion = "3.4.0"
-    //implementation "com.airbnb.android:lottie:$lottieVersion"
-    //implementation 'com.airbnb.android:lottie:2.8.0'
-    //implementation 'com.google.android.gms:play-services-ads:19.1.0'
+    //adding part from Cuong
+    //login facebook
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    //implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    //animated button for login
+    implementation 'br.com.simplepass:loading-button-android:1.14.0'
+    // An va hien password
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
 }
 apply plugin: 'com.google.gms.google-services'
